--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -13,5 +13,9 @@
     border:0;
     background-image: linear-gradient(to bottom right,utils.$secondary-color,utils.$primary-color );
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: 0.5s;
+    &:hover{
+        transform: scale(1.1);
+    }
 }
 /* end-COMPONENTS-buttons */
