--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -78,26 +78,24 @@
         }        
         &__row{
             margin:15px auto;
-            width: 350px;
-            border:1px solid black;
+            width: 340px;
             border-radius: 20px;
             display: flex;
             gap:20px;
             padding: 25px 30px;
             background-color: lighten(lightgray,12%);
-            border:0;
             position: relative;
             font-weight: bold;
             font-size: 1.1rem;
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
             &--selected{
                 background-color: lighten(utils.$primary-color,30%);
-                color:darken(utils.$primary-color,20%);
+                color:darken(utils.$primary-color,20%);                
             }
             .number{
                 position: absolute;
-                margin-left: -40px;
-                margin-top:-5px;
+                left: -15px;
+                top:20px;
                 padding: 5px 10px;
                 border-radius: 50%;
                 background-color: utils.$primary-color;
